Fix T74915: Gpencil Tweak tool does not add point to selection holding Shift